# cedarling4j

./: .gitignore  README.md
.github/workflows/: build.yml
java/: pom.xml
java/src/main/java/io/jans/cedarling/bridge/: Cedarling.java  CedarlingError.java
java/src/main/javadoc/: overview.html
java/src/test/java/io/jans/cedarling/bridge/: CedarlingAuthorizationTest.java  CedarlingAuthorizationWithJwtValidationTest.java  (+4 more)
java/src/test/resources/authz-data/: generic-test-data.json  template.json
java/src/test/resources/authz-data/with-jwt-validation/: policy_deny.json  policy_permit.json
java/src/test/resources/authz-data/without-jwt-validation/: policy_permit.json
java/src/test/resources/policy-stores/: policy-store_ok.json  policy-store_ok.yaml
rust/: Cargo.toml
rust/src/: cedarling.rs  error.rs  lib.rs
rust/src/authz/: authorize_request.rs  authorize_request_unsigned.rs  authorize_result.rs  cedar_entity_mapping.rs  context.rs  entity_data.rs  mod.rs
rust/src/cedar_policy/: authz_decision.rs  authz_error.rs  diagnostics.rs  mod.rs  policy_id.rs  policy_response.rs
rust/src/config/: authorization_config.rs  bootstrap_config.rs  entity_builder_config.rs  entity_names.rs  id_token_trust_mode.rs  json_rule.rs  jwt_algorithm.rs  jwt_config.rs  lock_service_config.rs  log_config.rs  log_level.rs  log_type.rs  memory_log_config.rs  mod.rs  policy_store_config.rs  policy_store_source.rs  unsigned_role_id_src.rs
rust/src/jni/: duration.rs  file.rs  jni_cache.rs  list.rs  mod.rs  uri.rs  util.rs
src/main/cpp/: io_jans_cedarling_bridge_Cedarling.h
(+43 files in other folders)
