[package]
name = "cedarling-java-bridge"
version = "0.1.0"
edition = "2021"

[dependencies]
jni = "0.21.0"
jsonwebtoken = "9.3.1"
cedarling = { path = "crates/jans-cedarling/cedarling", features=["blocking"] }
serde_json = "1.0"
cedar-policy = "4.2"
thiserror = "2"
url = "2.5.4"

[lib]
name = "cedarling4j"
crate-type = ["cdylib"]